# order-scrapers

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  TODO.md  lychee.toml  pyproject.toml
.github/workflows/: linkcheck.yml  publish.yml  tests.yml
src/order_scrapers/: __init__.py  aliexpress.py  cli.py  config.py  decathlon.py  lidl.py  store.py  svb24.py
tests/: conftest.py  test_aliexpress.py  test_decathlon.py  test_lidl.py  test_store.py  test_svb24.py
tests/fixtures/: aliexpress-order-list.json  invoice-3630868.txt  lidl-receipts-sample.json  order-3630868-detail.html  orders.html
userscripts/: README.md  order-api-capture.user.js
