[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "order-scrapers"
dynamic = ["version"]
description = "Append-only order/purchase history builders (JSONL) for various web shops"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Tobias Brox", email = "tobias@redpill-linpro.com" }]
keywords = ["scraper", "orders", "receipts", "jsonl", "aliexpress", "lidl", "decathlon", "svb24"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Office/Business :: Financial :: Accounting",
]
dependencies = [
  "browser_cookie3>=0.20",
  "curl_cffi>=0.7",
  "requests>=2.31",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.14", "pre-commit>=4.0"]

[project.scripts]
svb24-history = "order_scrapers.svb24:main"
decathlon-history = "order_scrapers.decathlon:main"
aliexpress-history = "order_scrapers.aliexpress:main"
lidl-history = "order_scrapers.lidl:main"

[project.urls]
Repository = "https://github.com/tobixen/order-scrapers"
Issues = "https://github.com/tobixen/order-scrapers/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/order_scrapers/_version.py"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "PT"]

[tool.ruff.lint.isort]
known-first-party = ["order_scrapers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
filterwarnings = ["error"]
